<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editTextVolume"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/volume"
        android:inputType="numberDecimal"
        android:textColor="?android:attr/editTextColor" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextVolume"
        android:layout_marginTop="44dp" >

        <RadioButton
            android:id="@+id/radioHardA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/HardA"
            android:textColor="?android:attr/textColorPrimaryDisableOnly" 
            android:onClick="EnableVolume" />

        <RadioButton
            android:id="@+id/radioBeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer"
            android:textColor="?android:attr/textColorPrimaryDisableOnly" 
            android:onClick="DisableVolume" />

        <RadioButton
            android:id="@+id/radioWine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wine"
            android:textColor="?android:attr/textColorPrimaryDisableOnly" 
            android:onClick="EnableVolume" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textColor="?android:attr/editTextColor" >

<!--         <requestFocus /> -->
    </EditText>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup1"
        android:onClick="onCalculate"
        android:text="@string/calc"
/>

    <Button
        android:id="@+id/buttonTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCalculate"
        android:layout_alignBottom="@+id/buttonCalculate"
        android:layout_toRightOf="@+id/buttonCalculate"
        android:onClick="onTotal"
        android:text="Add To Total"
/>

    <EditText
        android:id="@+id/editTextTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonTotal"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:textColor="?android:attr/editTextColor" />

    <EditText
        android:id="@+id/editTextCurrPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextTotalPrice"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonTotal"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:textColor="?android:attr/editTextColor" />

    <TextView
        android:id="@+id/textViewCurrPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextCurrPrice"
        android:layout_alignBottom="@+id/editTextCurrPrice"
        android:layout_toLeftOf="@+id/editTextCurrPrice"
        android:text="Price:"
        android:textSize="@dimen/fontsiz" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextTotalPrice"
        android:layout_alignBottom="@+id/editTextTotalPrice"
        android:layout_toLeftOf="@+id/editTextTotalPrice"
        android:text="Total Price:"
        android:textSize="@dimen/fontsiz" />

</RelativeLayout>
